deployment/go/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-server
  template:
    metadata:
      labels:
        app: go-server
    spec:
      containers:
        - name: go-server
          image: squishmeist/go-server:latest
          ports:
            - containerPort: 8080
