deployment/go/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-server-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  rules:
    - host: go.squishmeist.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-server-service
                port:
                  number: 80
  tls:
    - hosts:
        - go.squishmeist.com
